--- a/formpage.html
+++ b/formpage.html
@@ -14,7 +14,7 @@
             <strong>Navbar</strong>
             <ul>
                 
-                <li ><a class="home" href="tp2floats.html"><i class="fa-solid fa-house"></i> Home</a></li>
+                <li ><a class="home" href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
                 <li><a href="#"><i class="fa-solid fa-circle-user"></i> Features</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">About</a></li>
